plugins/backgroundcontrast: replace blitFromFramebuffer with blitFromRenderTarget

blitFromFramebuffer requires glBlitFramebuffer support, and can crash KWin when it's not
supported. blitFromRenderTarget handles this correctly

BUG: 484193